--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 class="discount">65% OFF</h2>
             <p class="holiday">OUR HOLIDAY DEALS ARE BETTER</p>
             <h2 class="catagories">ALL CATEGORIES</h2>
-            <img class="banner2-img" src="Images/New Year Photo.png" alt="">
+            <img class="banner2-img" src="./images/New Year Photo.png" alt="">
         </div>
         <div class="banner-bg">
             <div class="banner-3">
@@ -37,14 +37,15 @@
                 <img class="hero-img" src="./images/Group_70.png" alt="">
             </div>
         </div>
-            <div class="container">
-                <div class="container-content">
-                    <h1 class="container-sub-item"><span class="container-title">Place:</span>New Park Hotel</h1>
-                    <h1 class="container-sub-item"><span class="container-title">Date:</span>31 December Night 2023</h1>
-                    <h1 class="container-sub-item"><span class="container-title">Time:</span>Evening 7.30 pm to 12.30 am</h1>
-                    <button>Join Now</button>
-                </div>
+        <div class="container">
+            <div class="container-content">
+                <h1 class="container-sub-item"><span class="container-title">Place:</span>New Park Hotel</h1>
+                <h1 class="container-sub-item"><span class="container-title">Date:</span>31 December Night 2023</h1>
+                <h1 class="container-sub-item"><span class="container-title">Time:</span>Evening 7.30 pm to 12.30 am</h1>
+                <button>Join Now</button>
             </div>
+        </div>
+        
     </main>
 </body>
 </html>
