section five added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
                 <button>Join Now</button>
             </div>
         </div>
+
+        <div class="container-box">
+            <div class="box-content">
+                <p class="offer">NEW BEST OFFER</p>
+                <h2 class="coming-soon">Coming Soon</h2>
+                <p class="box-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            </div>
+            <div class="box-content">
+                <div class="img-border">
+                    <img src="./images/Ellipse 1.png" alt="">
+                </div>
+            </div>
+            <div class="box-content">
+                <h2 class="Years">2024</h2>
+                <p class="box-description-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img class="section-five-img" src="/images/Group 96.png" alt="">
+            </div>
+        </div>
         
     </main>
 </body>
