--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 class="discount">65% OFF</h2>
             <p class="holiday">OUR HOLIDAY DEALS ARE BETTER</p>
             <h2 class="catagories">ALL CATEGORIES</h2>
-            <img class="banner2-img" src="../images/New Year Photo.png" alt="">
+            <img class="banner2-img" src="./images/New Year Photo.png" alt="">
         </div>
         <div class="banner-bg">
             <div class="banner-3">
@@ -34,7 +34,7 @@
                     <P class="banner-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </P>
                     <p class="Join-now">Join Now</p>
                 </div>
-                <img class="hero-img" src="../images/Group_70.png" alt="">
+                <img class="hero-img" src="./images/Group_70.png" alt="">
             </div>
         </div>
         <div class="container">
@@ -60,10 +60,10 @@
             <div class="box-content">
                 <h2 class="Years">2024</h2>
                 <p class="box-description-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                <img class="section-five-img" src="/images/Group 96.png" alt="">
+                <img class="section-five-img" src="./images/Group 96.png" alt="">
             </div>
         </div>
         
     </main>
-</body>
+</body> 
 </html>
