2 more section added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
                 <img class="section-five-img" src="./images/Group 96.png" alt="">
             </div>
         </div>
+        <section class="section-one">
+                <div class="section-content">
+                    <p class="section-greeting">What is Functional</p>
+                    <h1 class="section-title"><span class="span">Holiday</span> Sale 50%</h1>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed<br>sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id<br> fermentum amet amet sit consectetur.</p>
+                </div>
+                <div class="discount-img">
+                    <div class="gift-img" ><img src="./images/Group_75.png" alt=""></div>
+                    <div class="discount-50">
+                        <img class="discount-inner-img" src="./images/Group 44.png" alt="">
+                    </div>
+                </div>
+                <div class="red-bg"></div>
+        </section>
         
     </main>
 </body> 
