portfolio section builded

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
                 </div>
                 <div class="red-bg"></div>
         </section>
+        <section class="section-two">
+            <div class="box-content">
+                <p class="offer-title">THE BEST GIFTS</p>
+                <h2 class="coming-soon">Our Awesome Portfolio</h2>
+                <p class="box-description-two">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            </div>
+            <div class="image-container">
+                <img class="container-inner-img" src="./images/Rectangle 3.png" alt="Image ">
+                <img class="container-inner-img" src="./images/Rectangle 4.png" alt="Image ">
+                <img class="container-inner-img" src="./images/Rectangle 6.png" alt="Image ">
+                <img class="container-inner-img" src="./images/Rectangle 8.png" alt="Image ">
+                <img class="container-inner-img" src="./images/Rectangle 7.png" alt="Image ">
+                <img class="container-inner-img" src="./images/Rectangle 5.png" alt="Image ">
+            </div>
+        </section>
+
         
     </main>
 </body> 
