--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1 class="container-sub-item"><span class="container-title">Place:</span>New Park Hotel</h1>
                 <h1 class="container-sub-item"><span class="container-title">Date:</span>31 December Night 2023</h1>
                 <h1 class="container-sub-item"><span class="container-title">Time:</span>Evening 7.30 pm to 12.30 am</h1>
-                <button>Join Now</button>
+                <button class="section-two-button">Join Now</button>
             </div>
         </div>
 
@@ -92,7 +92,16 @@
                 <img class="container-inner-img" src="./images/Rectangle 5.png" alt="Image ">
             </div>
         </section>
-
+        <div class="newsletter-container">
+            <img class="newsletter-img" src="./images/Group 61.png" alt="Email Icon">
+            <h2 class="newsletter-title">Subscribe Newsletter</h2>
+            <p class="newsletter-content">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br> Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            
+            <form class="subscribe-form">
+                <input class="subscribe-input" type="email" placeholder="user@gmail.com">
+                <button class="subscribe-button" type="submit">Subscribe</button>
+            </form>
+        </div>
         
     </main>
 </body> 
